MINOR Install screen visual tweaks, more visible disabled state on install button, conditional version number (to avoid it showing without a version), referencing new theme in install screen, using new layout in install progress screen as well

--- a/dev/install/scss/install.scss
+++ b/dev/install/scss/install.scss
@@ -351,7 +351,7 @@ body {
 			&[disabled=disabled] {
 				border: 1px solid #aaa;
 				border-color: #bbb #bbb #aaa;
-				color: #222;
+				color: #999;
 				text-shadow: 0 1px 0 #eee;
 				@include topGradient (#fbfbfb, #bbb);
 				&:hover {
